--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ images/admin/*
 images/galleries/*
 robots.txt
 git-hook.php
+logs/*
 admin/includes/tinymce/upload-files/*
 phpMyAdmin/*
 admin/pThumb*
